# risk_aware_decision_making

./: CMakeLists.txt  README.md  package.xml  save_video.txt  setup.py
gazebo/models/CGMClassic/: model.sdf
gazebo/models/P22_IF_walls/: model.config  model.sdf
gazebo/models/Toilet/: model.sdf
gazebo/models/Toilet/meshes/: toilet.mtl
gazebo/plugins/: ActorPlugin.cc  ActorPlugin.hh  CMakeLists.txt  publisher.cc
gazebo/worlds/: P22_IF.world
launch/: launch_gazebo.launch
msg/: patient_state.msg
src/: Fall_risk_assesment.py  GPs_learning.py  Gaussian_processes.py  Object_Library.csv  Object_Library.ods  Optimization.py  Room_baseline_evaluation.py  Trajectory_generation.py  intervention_problem.py  main.py  main_simulation.py  motion_generation.py  read_blueprint.py  result_plotter.py  robot_mover.py  simulation.py  solvers.py  utility.py  visualization.py
src/data/Room-2-Inboard-Footwall/: baseline_evaluation.pickle  env.pickle  fallScores_bed.pickle  fallScores_bed_l.pickle  fallScores_door.pickle  fallScores_toilet.pickle  fallScores_visitor-chair.pickle  motion_GPs.pickle  plan.pickle  plan1.pickle  plan2.pickle  results-CVaR (copy).pickle  results-CVaR.pickle  results-deterministic.pickle  results-exp+CVaR.pickle  trajectories.pickle
