<?xml version="1.0"?>
<package format="2">
  <name>risk_aware_planning</name>
  <version>1.0.0</version>
  <description>
    A package for a hospital room world with multiple furniture for Gazebo simulations.
  </description>
  <license>Apache 2.0</license>
  <author email="sabbaghnovin@gmail.com">Roya sabbagh Novin</author>
  <maintainer email="sabbaghnovin@gmail.com">Roya sabbagh Novin</maintainer>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/gazebo/models"/>
  </export>
</package>
